--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -5,7 +5,7 @@ header .header__logo {
   position: absolute;
 }
 
-h1 {
+h2 {
   font-size: 30px;
   padding-left: 33px;
   position: relative;
@@ -22,4 +22,18 @@ hr.header__hr {
 .header {
   grid-column: 1/-1;
   grid-row: 1/2;
+}
+
+.header__shop{
+  display: flex;
+  grid-row: 1/2;
+  justify-content: space-between; 
+}
+
+
+.rounded-circle {
+  width: "4rem";
+  height: "4rem";
+   position: "relative"; 
+   border-radius: "40px";
 }
