--- a/src/styles/SectionBooks.css
+++ b/src/styles/SectionBooks.css
@@ -16,6 +16,10 @@ h4,
   text-align: center;
 }
 
+.gallery__btn-details {
+   margin-top: 10px;
+}
+
 .gallery__book-details {
   color: #aaaaaa;
   font-size: 15px;
@@ -28,6 +32,11 @@ p {
 
 .gallery__book-author {
   font-weight: lighter;
+}
+
+
+.gallery_btn-addToBuy {
+  color: blue
 }
 
 span a {
@@ -63,9 +72,7 @@ hr.gallery__hr {
   width: 30px;
 }
 
-.gallery__book button {
-  background-color: #aaaaaa;
-  color: #eeeeee;
+.gallery__book {
   border-radius: 5px;
   border: none;
   font-size: 16px;
@@ -73,12 +80,35 @@ hr.gallery__hr {
   cursor: pointer;
 }
 
-.gallery__book button:hover {
-  background-color: #008000;
+.gallery_btn button {
+  background-color: #aaaaaa; 
+  color: #eeeeee;  
+}
+
+.gallery_btn-addToBuy {
+  background-color: #0096FF;
+  color: #eeeeee;
+}
+
+.gallery__confirmReturnedBook{
+  background-color: #aaaaaa; 
+  color: #eeeeee;  
 }
 
 .active h1,
 .done h1 {
   display: flex;
   justify-content: center;
+}
+
+
+.btn_minus ,
+.btn_plus {
+  background-color: #0096FF;
+  color: #eeeeee;
+}
+
+.btn_removeBoughtBook{
+  background-color: #ff0000;
+  color: #eeeeee;
 }
