--- a/client/src/styles/LoginForm.scss
+++ b/client/src/styles/LoginForm.scss
@@ -15,8 +15,8 @@ $white: #ffffff;
 .container-register{
     display: flex;
     flex-direction:column;
-    height: 400px;
-    width: 400px;
+    height: 470px;
+    width: 470px;
     padding: 30px;
     border-radius: 0 20px 20px 20px;
     gap: 20px;
@@ -34,6 +34,7 @@ $white: #ffffff;
 
 .login-title {
     z-index: 100;
+    padding: 0;
 }
 
 .logo_background {
