--- a/client/src/styles/LoginForm.scss
+++ b/client/src/styles/LoginForm.scss
@@ -31,6 +31,11 @@ $white: #ffffff;
     background-color: $light-blue;
 }
 
+.container-noFound{
+    display: flex;
+    flex-direction:column;
+    align-items: center;
+}
 
 .login-title {
     z-index: 100;
@@ -73,6 +78,11 @@ $white: #ffffff;
         border-radius: .25em;
         font-weight: lighter;
     }
+}
+
+.show-warning {
+    display: flex;
+    justify-content: center;
 }
 
 hr.span-login {
